force-app/main/default/objects/shc__SHCScore__c/shc__SHCScore__c.object-meta.xml
<CustomObject>
    <description>Security health check result.</description>
    <label>Security Score</label>
    <nameField>
        <label>Security Score Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Security Scores</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>