force-app/main/default/objects/shc__SHCScore__c/fields/shc__admins_users__c.field-meta.xml
<CustomField>
    <fullName>shc__admins_users__c</fullName>
    <formula>shc__numadmins__c / shc__numusers__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Admin User Ratio</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>