force-app/main/default/objects/shc__SHCScore__c/fields/shc__Configuration_Score__c.field-meta.xml
<CustomField>
    <fullName>shc__Configuration_Score__c</fullName>
    <label>Configuration Score</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>