force-app/main/default/objects/shc__SHCScore__c/fields/shc__Date__c.field-meta.xml
<CustomField>
    <fullName>shc__Date__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <description>Date this check was run</description>
    <label>Date</label>
    <type>DateTime</type>
</CustomField>