force-app/main/default/objects/shc__SHCScore__c/fields/shc__hassaml__c.field-meta.xml
<CustomField>
    <fullName>shc__hassaml__c</fullName>
    <label>Has SAML</label>
    <length>10</length>
    <type>Text</type>
</CustomField>