force-app/main/default/objects/shc__SHCScore__c/fields/shc__ipranges__c.field-meta.xml
<CustomField>
    <fullName>shc__ipranges__c</fullName>
    <label>IP Ranges</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>