force-app/main/default/objects/shc__SHCScore__c/fields/shc__ipranges_used__c.field-meta.xml
<CustomField>
    <fullName>shc__ipranges_used__c</fullName>
    <label>IP Range Restrictions Used</label>
    <length>10</length>
    <type>Text</type>
</CustomField>