force-app/main/default/objects/shc__SHCScore__c/fields/shc__numroles__c.field-meta.xml
<CustomField>
    <fullName>shc__numroles__c</fullName>
    <label>Number of Roles</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>