force-app/main/default/objects/shc__SHCScore__c/fields/shc__Org_Name__c.field-meta.xml
<CustomField>
    <fullName>shc__Org_Name__c</fullName>
    <defaultValue>$Organization.Name</defaultValue>
    <label>Org Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>