force-app/main/default/objects/shc__SHCScore__c/fields/shc__orgid__c.field-meta.xml
<CustomField>
    <fullName>shc__orgid__c</fullName>
    <defaultValue>$Organization.Id</defaultValue>
    <label>orgid</label>
    <length>20</length>
    <type>Text</type>
</CustomField>