force-app/main/default/objects/shc__SHCScore__c/fields/shc__Overall_Score__c.field-meta.xml
<CustomField>
    <fullName>shc__Overall_Score__c</fullName>
    <formula>( shc__Configuration_Score__c  + shc__Profile_Score__c + shc__Sharing_Score__c ) / 3</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Overall Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>