force-app/main/default/objects/shc__SHCScore__c/fields/shc__profs_users__c.field-meta.xml
<CustomField>
    <fullName>shc__profs_users__c</fullName>
    <formula>shc__numprofs__c  /  shc__numusers__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Profile User Ratio</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>