force-app/main/default/objects/shc__SHCScore__c/fields/shc__pwcomp_t__c.field-meta.xml
<CustomField>
    <fullName>shc__pwcomp_t__c</fullName>
    <formula>CASE(shc__pwcomp__c,
0,&quot;No restriction&quot;,
1,&quot;Must mix alpha and numeric&quot;,
&quot;Unknown&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Password Complexity (Text)</label>
    <type>Text</type>
</CustomField>