force-app/main/default/objects/shc__SHCScore__c/fields/shc__pwexpire__c.field-meta.xml
<CustomField>
    <fullName>shc__pwexpire__c</fullName>
    <label>Password Expiration</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>