force-app/main/default/objects/shc__SHCScore__c/fields/shc__pwhist__c.field-meta.xml
<CustomField>
    <fullName>shc__pwhist__c</fullName>
    <label>Password Saved History</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>