force-app/main/default/objects/shc__SHCScore__c/fields/shc__pwlen__c.field-meta.xml
<CustomField>
    <fullName>shc__pwlen__c</fullName>
    <label>Password Minimum Length</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>