force-app/main/default/objects/shc__SHCScore__c/fields/shc__pwlockout__c.field-meta.xml
<CustomField>
    <fullName>shc__pwlockout__c</fullName>
    <label>Lockout Effective Time</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>