force-app/main/default/objects/shc__SHCScore__c/fields/shc__pwlogin__c.field-meta.xml
<CustomField>
    <fullName>shc__pwlogin__c</fullName>
    <label>Max Invalid Login Attempts</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>