force-app/main/default/objects/shc__SHCScore__c/fields/shc__pwquest_t__c.field-meta.xml
<CustomField>
    <fullName>shc__pwquest_t__c</fullName>
    <formula>CASE(shc__pwquest__c,
0,&quot;None&quot;,
1,&quot;Cannot contain password&quot;,
&quot;Unknown&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Password Question Requirement (text)</label>
    <type>Text</type>
</CustomField>