force-app/main/default/objects/shc__SHCScore__c/fields/shc__sesscache__c.field-meta.xml
<CustomField>
    <fullName>shc__sesscache__c</fullName>
    <label>Enable Caching on Login Page</label>
    <length>10</length>
    <type>Text</type>
</CustomField>