force-app/main/default/objects/shc__SHCScore__c/fields/shc__sesslockip__c.field-meta.xml
<CustomField>
    <fullName>shc__sesslockip__c</fullName>
    <label>Lock Session to IP Address</label>
    <length>10</length>
    <type>Text</type>
</CustomField>