force-app/main/default/objects/shc__SHCScore__c/fields/shc__sesssecure__c.field-meta.xml
<CustomField>
    <fullName>shc__sesssecure__c</fullName>
    <label>Require Secure Sessions (https)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>