force-app/main/default/objects/shc__SHCScore__c/fields/shc__sesstimeout__c.field-meta.xml
<CustomField>
    <fullName>shc__sesstimeout__c</fullName>
    <label>Session Idle Timeout</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>