force-app/main/default/objects/shc__SHCScore__c/fields/shc__sesstimeoutdisable__c.field-meta.xml
<CustomField>
    <fullName>shc__sesstimeoutdisable__c</fullName>
    <label>Disable Session Timeout Warning</label>
    <length>10</length>
    <type>Text</type>
</CustomField>