force-app/main/default/objects/shc__SHCScore__c/fields/shc__sharing_campaign__c.field-meta.xml
<CustomField>
    <fullName>shc__sharing_campaign__c</fullName>
    <label>Sharing Campaign</label>
    <length>100</length>
    <type>Text</type>
</CustomField>