force-app/main/default/objects/shc__SHCScore__c/fields/shc__sharing_number__c.field-meta.xml
<CustomField>
    <fullName>shc__sharing_number__c</fullName>
    <label>Number of Sharing Rules</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>