force-app/main/default/objects/shc__SHCScore__c/fields/shc__test_run__c.field-meta.xml
<CustomField>
    <fullName>shc__test_run__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Test Run</label>
    <type>Checkbox</type>
</CustomField>