force-app/main/default/objects/shc__SHCScore__c/fields/shc__To_Send__c.field-meta.xml
<CustomField>
    <fullName>shc__To_Send__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Report is scheduled to be sent</label>
    <type>Checkbox</type>
</CustomField>