force-app/main/default/objects/shc__SHCScore__c/listViews/shc__Security_Score_View.listView-meta.xml
<ListView>
    <fullName>shc__Security_Score_View</fullName>
    <columns>shc__Date__c</columns>
    <columns>NAME</columns>
    <columns>shc__Org_Name__c</columns>
    <columns>shc__Overall_Score__c</columns>
    <columns>shc__Configuration_Score__c</columns>
    <columns>shc__Profile_Score__c</columns>
    <filterScope>Everything</filterScope>
    <label>Security Scores View</label>
</ListView>